Github gist embed support

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,10 +13,28 @@
     @apply text-3xl font-bold text-gray-800;
   }
   h2 {
-    @apply text-2xl font-bold text-gray-800;
+    @apply text-2xl font-bold text-gray-800 pt-10;
   }
   h3 {
-    @apply text-xl text-gray-800;
+    @apply text-xl font-bold text-gray-800 pt-10;
+  }
+  h4 {
+    @apply text-lg font-bold text-gray-800;
+  }
+  h5 {
+    @apply text-base font-bold text-gray-800 pt-10;
+  }
+  code {
+    @apply bg-slate-200 px-2 rounded-sm;
+  }
+  blockquote {
+    @apply p-4 italic border-l-4 bg-neutral-100 text-neutral-600 border-neutral-500;
+  }
+  li.blog__block_list {
+    @apply list-disc;
+  }
+  li.blog__block_list ul li {
+    @apply list-square;
   }
 }
 
