--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,6 +69,9 @@
   ul.JS-NavigationMenuList li a {
     @apply py-4 pr-4;
   }
+  /* #JS-HeaderMenu.open ul.JS-NavigationMenuList li a {
+    @apply text-white;
+  } */
   #JS-HeaderMenu.open {
     @apply animate-slide-in-left;
   }
